[gd_scene load_steps=6 format=3 uid="uid://d208hg2yybtdh"]

[ext_resource type="PackedScene" uid="uid://dwlmkmkaoshe8" path="res://Catapult2.aseprite" id="1_gdi5l"]
[ext_resource type="Script" path="res://Scripts/Shooting.gd" id="2_5fspc"]
[ext_resource type="Texture2D" uid="uid://cjtalysdtxwrp" path="res://Art/Circle.png" id="3_k2661"]
[ext_resource type="Script" path="res://Scripts/Arc.gd" id="4_pnup7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1i23h"]
size = Vector2(42.6667, 48.3333)

[node name="Catapult2" type="Sprite2D"]
position = Vector2(-13, -88)
scale = Vector2(3, 3)
hframes = 4
vframes = 4
frame = 4
script = ExtResource("2_5fspc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 4.83333)
shape = SubResource("RectangleShape2D_1i23h")

[node name="Circle" type="Sprite2D" parent="."]
visible = false
position = Vector2(9, -7)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_k2661")
script = ExtResource("4_pnup7")
order = 1

[node name="Circle2" type="Sprite2D" parent="."]
visible = false
position = Vector2(27, -7)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_k2661")
script = ExtResource("4_pnup7")
order = 2

[node name="Circle3" type="Sprite2D" parent="."]
visible = false
position = Vector2(46, -7)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_k2661")
script = ExtResource("4_pnup7")
order = 3

[node name="Circle4" type="Sprite2D" parent="."]
visible = false
position = Vector2(66, -7)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_k2661")
script = ExtResource("4_pnup7")
order = 4

[node name="Circle5" type="Sprite2D" parent="."]
visible = false
position = Vector2(85, -6)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_k2661")
script = ExtResource("4_pnup7")
order = 5

[node name="Circle6" type="Sprite2D" parent="."]
visible = false
position = Vector2(103, -6)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_k2661")
script = ExtResource("4_pnup7")
order = 6

[node name="Catapult" parent="." instance=ExtResource("1_gdi5l")]
position = Vector2(0.666667, 6.66667)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
